@@ -112,24 +112,38 @@
 
 (defmethod sequence:make-sequence-iterator
     ((sequence my-list) &key from-end start end)
-  (declare (ignore from-end start end))
-  (values sequence (my-list) nil
-          (lambda (sequence iterator from-end)
-            (declare (ignore sequence from-end))
-            (kdr iterator))
-          (lambda (sequence iterator limit from-end)
-            (declare (ignore sequence from-end))
-            (eq iterator limit))
-          (lambda (sequence iterator)
-            (declare (ignore sequence))
-            (kar iterator))
-          (lambda (new sequence iterator)
-            (declare (ignore sequence))
-            (setf (kar iterator) new))
-          (constantly 0)
-          (lambda (sequence iterator)
-            (declare (ignore sequence))
-            iterator)))
+  (declare (ignore from-end))
+  (let* ((index (or start 0))
+         (iterator (loop for i from 0
+                         for iterator = sequence then (kdr iterator)
+                         until (= i index)
+                         finally (return iterator)))
+         (limit (if end
+                    (loop for i from index
+                          for limit = iterator then (kdr limit)
+                          until (= i end)
+                          finally (return limit))
+                    (my-list))))
+    (values iterator limit nil
+            (lambda (sequence iterator from-end)
+              (declare (ignore sequence from-end))
+              (incf index)
+              (kdr iterator))
+            (lambda (sequence iterator limit from-end)
+              (declare (ignore sequence from-end))
+              (eq iterator limit))
+            (lambda (sequence iterator)
+              (declare (ignore sequence))
+              (kar iterator))
+            (lambda (new sequence iterator)
+              (declare (ignore sequence))
+              (setf (kar iterator) new))
+            (lambda (sequence iterator)
+              (declare (ignore sequence iterator))
+              index)
+            (lambda (sequence iterator)
+              (declare (ignore sequence))
+              iterator))))
 
 (with-test (:name :map-into)
   (assert (equal (coerce (map-into (my-list 1 2 3) #'identity '(4 5 6)) 'list)
@@ -140,3 +154,10 @@
     (assert (string= "abc"
                      (with-output-to-string (stream)
                        (write-sequence sequence stream))))))
+
+(with-test (:name (read-sequence :user-defined-sequence))
+  (let ((sequence (my-list #\a #\b #\c #\d)))
+    (with-input-from-string (stream "wxyz")
+      (let ((position (read-sequence sequence stream :start 1 :end 3)))
+        (assert (eql 3 position))
+        (assert (equal '(#\a #\w #\x #\d) (coerce sequence 'list)))))))
