@@ -18,6 +18,8 @@ changes relative to sbcl-2.3.10:
   * enhancement: character decoding and encoding errors signalled by stream or
     octet functions now provide a USE-VALUE restart for handlers to provide
     replacement input or output.
+  * enhancement: READ-SEQUENCE and WRITE-SEQUENCE support user-defined
+    sequences.
   * bug fix: OCTETS-TO-STRING using unibyte external formats with unallocated
     codepoints (e.g. iso-8859-3) correctly signal or use replacements rather
     than taking bits from the address of NIL and converting those bits to
